--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <img src="/asset/navbg.png" alt="" width="100%" style="position: absolute; top: 0;min-height: 512px;" >
+        <img src="/asset/navbg.png" alt="" width="100%" style="position: absolute; top: 0;min-height: 512px;z-index: -1;" >
         <nav class="navbar navbar-expand-lg" style="margin-top:44px; padding: 0;">
             <div class="container-fluid d-flex justify-content-center" style="gap:30px;">
                 <a href="#" style="width: 230px; height: 52px;">
@@ -51,5 +51,4 @@
                 </div>
             </div>
         </nav>
-        </div>
     </header>
