feat : udh bikin login, register, dll semoga cepet kelar

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -188,7 +188,7 @@
     <header style="margin-bottom: 7vw;">
         <nav class="navbar navbar-expand-lg" style="margin-top:44px; padding: 0;">
             <div class="container-fluid d-flex justify-content-center" style="gap:30px;">
-                <a href="#" style="width: 230px; height: 52px;">
+                <a href="/" style="width: 230px; height: 52px;">
                     <img src="/asset/LOGO.png" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -197,17 +197,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-grow: 0;">
                     <ul class="navbar-nav" style="gap: 40px;">
                         <li class="nav-item d-flex align-items-center">
-                            <a href="#"
+                            <a href="/categories"
                             >Categories</a>
                         </li>
                         <li class="nav-item d-flex align-items-center">
-                            <a href="#">Top Rated</a>
+                            <a href="/toprated">Top Rated</a>
                         </li>
                         <li class="nav-item d-flex align-items-center">
-                            <a href="#">Eatlist</a>
+                            <a href="/eatlist">Eatlist</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#"
+                            <a href="<%=redir%>"
                             class="d-flex align-items-center justify-content-center"
                             style="color: #FFF; width: fit-content; padding: 12px 32px; gap: 12px; text-decoration: none; border-radius: 30px; background: #000; box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.25);
                             font-family: 'Montserrat', sans-serif;
@@ -215,7 +215,7 @@
                             font-style: normal;
                             font-weight: 400;
                             line-height: 150%; /* 24px */"
-                            >My Account</a>
+                            ><%= myacc %></a>
                         </li>
                     </ul>
                 </div>
@@ -299,7 +299,7 @@
                 <div class="gallery">
                     <% for (let i = 0; i < foods.length; i++){ %>
                         <div class="gallery-item">
-                            <img src="/asset/Mashed Potato.jpg" alt="">
+                            <img src="/asset/<%= foods[i].name %>.jpg" alt="">
                             <div class="rating">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="47" height="50" viewBox="0 0 47 50" fill="none">
                                     <path d="M23.0324 18.1683L24.8366 24.5241H30.2492L25.8923 27.8349L27.6773 33.9864L23.0324 30.226L18.3876 33.9864L20.1726 27.8349L15.8156 24.5241H21.2282L23.0324 18.1683ZM23.0324 4.0874L18.3876 20.4368H3.83887L15.6813 29.4494L11.19 44.9609L23.0324 35.3761L34.894 44.9609L30.3836 29.4494L42.226 20.4368H27.6773L23.0324 4.0874Z" fill="#FFD74B"/>
@@ -308,10 +308,10 @@
                             </div>
                             <div class="textandprice">
                                 <h4 class="foodname">
-                                    <%= foods[i].name %>
+                                    <%= foods[i].name%>
                                 </h4>
                                 <h3 class="pricenumber">
-                                    <span class="pricecurr">Rp</span> 20.000
+                                    <span class="pricecurr">Rp</span> <%= foods[i].price + ".000"%>
                                 </h3>
                             </div>
                         </div>
@@ -328,7 +328,7 @@
                     <img src="/asset/footerbrand.png" alt="">
                 </div>
                 <div class="footertext">
-                    <a href="" class="footerlink">
+                    <a href="/home" class="footerlink">
                         About Us
                     </a>
                 </div>
