--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,7 +7,7 @@
                 <img src="/asset/footerbrand.png" alt="">
             </div>
             <div class="footertext">
-                <a href="" class="footerlink">
+                <a href="/about" class="footerlink">
                     About Us
                 </a>
             </div>
