--- a/views/about.ejs
+++ b/views/about.ejs
@@ -40,6 +40,7 @@
             font-style: normal;
             font-weight: 300;
             line-height: normal;
+            justify-content: center;
         }
 
         .desc{
@@ -109,6 +110,9 @@
             font-weight: 300;
             line-height: normal;
         }
+        .card img{
+            border-radius: 20px;
+        }
     </style>
 </head>
 <body>
@@ -161,107 +165,107 @@
     </section>
     <section class="perkenalan" >
         <div class="desc">
-            <h1 class="desctext" style="text-indent: 50px;">
-                Kami adalah kelompok 3 milestone dan kami membuat website ini untuk memenuhi tugas milestone yang diberikan kepada kami. Website ini memberikan rekomendasi makanan kepada pengguna sesuai dengan kategori yang mereka pilih, serta kalori dan budget yang pengguna inginkan.
+            <h1 class="desctext" style="text-indent: 50px; text-align: justify;">
+                Kami dari kelompok 3 milestone dan kami membuat website ini untuk memenuhi tugas milestone yang diberikan kepada kami. Website ini bertujuan untuk memberikan rekomendasi makanan kepada pengguna sesuai dengan kategori yang mereka pilih, serta kalori dan budget yang pengguna inginkan.
             </h1>
         </div>
         <div class="card-container">
             <div class="card">
-                <img src="" alt="" width="300px" height="300px">
+                <img src="/asset/Dama.jpg" alt="" width="300px" height="300px">
                 <div class="text">
-                    <div class="name">Dama Daliman</div>
+                    <div class="name">Dama Dhananjaya Daliman</div>
                     <div class="role">Chief of Project</div>
+                </div>  
+            </div>
+            <div class="card">
+                <img src="/asset/Cupi.jpg" alt="" width="300px" height="300px">
+                <div class="text">
+                    <div class="name">Muhammad Yusuf Rafi</div>
+                    <div class="role">Front-end</div>
+                </div>  
+            </div>
+            <div class="card">
+                <img src="/asset/Adril.jpg" alt="" width="300px" height="300px">
+                <div class="text">
+                    <div class="name">Adril Putra Merin</div>
+                    <div class="role">Back-end</div>
+                </div>  
+            </div>
+            <div class="card">
+                <img src="/asset/Diana.jpg" alt="" width="300px" height="300px">
+                <div class="text">
+                    <div class="name">Diana Tri Handayani</div>
+                    <div class="role">Front-end</div>
+                </div>  
+            </div>
+            <div class="card">
+                <img src="/asset/Tanto.jpg" alt="" width="300px" height="300px">
+                <div class="text">
+                    <div class="name">Hartanto Luwis</div>
+                    <div class="role">Back-end</div>
+                </div>  
+            </div>
+            <div class="card">
+                <img src="/asset/Qie.jpg" alt="" width="300px" height="300px">
+                <div class="text">
+                    <div class="name">Rizqi Andhika Pratama</div>
+                    <div class="role">UI/UX</div>
+                </div>  
+            </div>
+            <div class="card">
+                <img src="/asset/Evelyn.jpg" alt="" width="300px" height="300px">
+                <div class="text">
+                    <div class="name">Evelyn Yosiana</div>
+                    <div class="role">Research & Data</div>
+                </div>  
+            </div>
+            <div class="card">
+                <img src="/asset/Marvel.jpg" alt="" width="300px" height="300px">
+                <div class="text">
+                    <div class="name">Marvel Pangondian</div>
+                    <div class="role">Back-end</div>
+                </div>  
+            </div>
+            <div class="card">
+                <img src="/asset/Irfan.png" alt="" width="300px" height="300px">
+                <div class="text">
+                    <div class="name">Irfan Musthofa</div>
+                    <div class="role">UI/UX</div>
                 </div>  
             </div>
             <div class="card">
                 <img src="" alt="" width="300px" height="300px">
                 <div class="text">
-                    <div class="name">Dama Daliman</div>
-                    <div class="role">Chief of Project</div>
+                    <div class="name">Alfaza Naufal Zakiy</div>
+                    <div class="role">-</div>
                 </div>  
             </div>
             <div class="card">
-                <img src="" alt="" width="300px" height="300px">
+                <img src="/asset/Sutha.jpg" alt="" width="300px" height="300px">
                 <div class="text">
-                    <div class="name">Dama Daliman</div>
-                    <div class="role">Chief of Project</div>
+                    <div class="name">Suthasoma Mahardhika Munthe</div>
+                    <div class="role">Back-end</div>
                 </div>  
             </div>
             <div class="card">
-                <img src="" alt="" width="300px" height="300px">
+                <img src="/asset/Wege.jpg" alt="" width="300px" height="300px">
                 <div class="text">
-                    <div class="name">Dama Daliman</div>
-                    <div class="role">Chief of Project</div>
+                    <div class="name">William Glory Henderson</div>
+                    <div class="role">Front-end</div>
                 </div>  
             </div>
             <div class="card">
-                <img src="" alt="" width="300px" height="300px">
+                <img src="/asset/Maha.jpg" alt="" width="300px" height="300px">
                 <div class="text">
-                    <div class="name">Dama Daliman</div>
-                    <div class="role">Chief of Project</div>
+                    <div class="name">Shabrina Maharani</div>
+                    <div class="role">Research & Data</div>
                 </div>  
             </div>
             <div class="card">
-                <img src="" alt="" width="300px" height="300px">
+                <img src="/asset/Lutfi.jpg" alt="" width="300px" height="300px">
                 <div class="text">
-                    <div class="name">Dama Daliman</div>
-                    <div class="role">Chief of Project</div>
-                </div>  
-            </div>
-            <div class="card">
-                <img src="" alt="" width="300px" height="300px">
-                <div class="text">
-                    <div class="name">Dama Daliman</div>
-                    <div class="role">Chief of Project</div>
-                </div>  
-            </div>
-            <div class="card">
-                <img src="" alt="" width="300px" height="300px">
-                <div class="text">
-                    <div class="name">Dama Daliman</div>
-                    <div class="role">Chief of Project</div>
-                </div>  
-            </div>
-            <div class="card">
-                <img src="" alt="" width="300px" height="300px">
-                <div class="text">
-                    <div class="name">Dama Daliman</div>
-                    <div class="role">Chief of Project</div>
-                </div>  
-            </div>
-            <div class="card">
-                <img src="" alt="" width="300px" height="300px">
-                <div class="text">
-                    <div class="name">Dama Daliman</div>
-                    <div class="role">Chief of Project</div>
-                </div>  
-            </div>
-            <div class="card">
-                <img src="" alt="" width="300px" height="300px">
-                <div class="text">
-                    <div class="name">Dama Daliman</div>
-                    <div class="role">Chief of Project</div>
-                </div>  
-            </div>
-            <div class="card">
-                <img src="" alt="" width="300px" height="300px">
-                <div class="text">
-                    <div class="name">Dama Daliman</div>
-                    <div class="role">Chief of Project</div>
-                </div>  
-            </div>
-            <div class="card">
-                <img src="" alt="" width="300px" height="300px">
-                <div class="text">
-                    <div class="name">Dama Daliman</div>
-                    <div class="role">Chief of Project</div>
-                </div>  
-            </div>
-            <div class="card">
-                <img src="" alt="" width="300px" height="300px">
-                <div class="text">
-                    <div class="name">Dama Daliman</div>
-                    <div class="role">Chief of Project</div>
+                    <div class="name">Lutfi Khairul Amal</div>
+                    <div class="role">Front-end</div>
                 </div>  
             </div>
         </div>
