--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <title><%= pageTitle %></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="/css/styles.css">
@@ -16,7 +15,7 @@
         <img src="/asset/navbg.png" alt="" width="100%" style="position: absolute; top: 0;min-height: 512px;z-index: -1;" >
         <nav class="navbar navbar-expand-lg" style="margin-top:44px; padding: 0;">
             <div class="container-fluid d-flex justify-content-center" style="gap:30px;">
-                <a href="#" style="width: 230px; height: 52px;">
+                <a href="/" style="width: 230px; height: 52px;">
                     <img src="/asset/LOGO.png" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,17 +24,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-grow: 0;">
                     <ul class="navbar-nav" style="gap: 40px;">
                         <li class="nav-item d-flex align-items-center">
-                            <a href="#"
+                            <a href="/categories"
                             >Categories</a>
                         </li>
                         <li class="nav-item d-flex align-items-center">
-                            <a href="#">Top Rated</a>
+                            <a href="/toprated">Top Rated</a>
                         </li>
                         <li class="nav-item d-flex align-items-center">
-                            <a href="#">Eatlist</a>
+                            <a href="/eatlist">Eatlist</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#"
+                            <a href="<%= redir %>"
                             class="d-flex align-items-center justify-content-center"
                             style="color: #FFF; width: fit-content; padding: 12px 32px; gap: 12px; text-decoration: none; border-radius: 30px; background: #000; box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.25);
                             font-family: 'Montserrat', sans-serif;
@@ -43,7 +42,7 @@
                             font-style: normal;
                             font-weight: 400;
                             line-height: 150%; /* 24px */"
-                            >My Account</a>
+                            ><%= myacc %></a>
                         </li>
                     </ul>
                 </div>
