feat : hampir kelar semua

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -109,7 +109,7 @@
         <header style="position: absolute; top: 44px;width: 100%;">
             <nav class="navbar navbar-expand-lg" style="padding: 0;">
                 <div class="container-fluid d-flex justify-content-center" style="gap:30px;">
-                    <a href="#" style="width: 230px; height: 52px;">
+                    <a href="/" style="width: 230px; height: 52px;">
                         <img src="/asset/LOGO.png" alt="logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -118,17 +118,17 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-grow: 0;">
                         <ul class="navbar-nav" style="gap: 40px;">
                             <li class="nav-item d-flex align-items-center">
-                                <a href="#"
+                                <a href="/"
                                 >Categories</a>
                             </li>
                             <li class="nav-item d-flex align-items-center">
-                                <a href="#">Top Rated</a>
+                                <a href="/">Top Rated</a>
                             </li>
                             <li class="nav-item d-flex align-items-center">
-                                <a href="#">Eatlist</a>
+                                <a href="/eatlist">Eatlist</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#"
+                                <a href="/login"
                                 class="d-flex align-items-center justify-content-center"
                                 style="color: #FFF; width: fit-content; padding: 12px 32px; gap: 12px; text-decoration: none; border-radius: 30px; background: #000; box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.25);
                                 font-family: 'Montserrat', sans-serif;
@@ -136,7 +136,7 @@
                                 font-style: normal;
                                 font-weight: 400;
                                 line-height: 150%; /* 24px */"
-                                >My Account</a>
+                                >Login</a>
                             </li>
                         </ul>
                     </div>
@@ -194,7 +194,7 @@
                         <img src="/asset/footerbrand.png" alt="" class="img-fluid">
                     </div>
                     <div class="footertext">
-                        <a href="" class="footerlink">
+                        <a href="/about" class="footerlink">
                             About Us
                         </a>
                     </div>
