--- a/views/about.ejs
+++ b/views/about.ejs
@@ -129,17 +129,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-grow: 0;">
                     <ul class="navbar-nav" style="gap: 40px;">
                         <li class="nav-item d-flex align-items-center">
-                            <a href="#"
+                            <a href="/categories"
                             >Categories</a>
                         </li>
                         <li class="nav-item d-flex align-items-center">
-                            <a href="#">Top Rated</a>
+                            <a href="/toprated">Top Rated</a>
                         </li>
                         <li class="nav-item d-flex align-items-center">
-                            <a href="#">Eatlist</a>
+                            <a href="/eatlist">Eatlist</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#"
+                            <a href="<%=redir%>"
                             class="d-flex align-items-center justify-content-center"
                             style="color: #FFF; width: fit-content; padding: 12px 32px; gap: 12px; text-decoration: none; border-radius: 30px; background: #000; box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.25);
                             font-family: 'Montserrat', sans-serif;
@@ -147,7 +147,7 @@
                             font-style: normal;
                             font-weight: 400;
                             line-height: 150%; /* 24px */"
-                            >My Account</a>
+                            ><%= myacc %></a>
                         </li>
                     </ul>
                 </div>
